@@ -28,12 +28,9 @@ Archetypes 1.3.0
 
 AT Content Types is tested with the following AT versions
 
- * AT 1.3.0-beta3
+ * AT 1.3.0-rc3+ (not yet released)
 
- * AT CVS release-1_3-branch (aka 1.3.0-beta3+) after 2004-07-25
-
-   Note: Please use the version of AT that is bundled with AT Content Types.
-         It's the latest release or developer checkout.
+ * AT SVN release-1_3-branch (aka 1.3.0-rc2+) after 2004-09-11
 
 AT Content Types doesn't work with other versions of Archetypes because some
 fixes are missing. Right now it's tested only with the newest cvs version of
